--- a/06-dom/one.html
+++ b/06-dom/one.html
@@ -14,7 +14,11 @@
 <body class="bg-black">
     <div>
         <h1 id="title" class="heading">DOM LEARNING</h1>
+        <h2>Lorem ipsum dolor sit.</h2>
+        <h2>Lorem ipsum dolor sit.</h2>
+        <h2>Lorem ipsum dolor sit.</h2>
         <p>Lorem ipsum dolor sit amet.</p>
+        <input type="password" name="" id="">
     </div>
 </body>
 </html>
