--- a/06-dom/one.html
+++ b/06-dom/one.html
@@ -20,5 +20,10 @@
         <p>Lorem ipsum dolor sit amet.</p>
         <input type="password" name="" id="">
     </div>
+    <ul>
+        <li>one</li>
+        <li>two</li>
+        <li>three</li>
+    </ul>
 </body>
 </html>
