--- a/06-dom/one.html
+++ b/06-dom/one.html
@@ -13,7 +13,7 @@
 </head>
 <body class="bg-black">
     <div>
-        <h1 id="title" class="heading">DOM LEARNING</h1>
+        <h1 id="title" class="heading">DOM LEARNING <span style="display: none;">chai aur code</span></h1>
         <h2>Lorem ipsum dolor sit.</h2>
         <h2>Lorem ipsum dolor sit.</h2>
         <h2>Lorem ipsum dolor sit.</h2>
